[gd_scene load_steps=10 format=3 uid="uid://bl2twktninjbm"]

[ext_resource type="Texture2D" uid="uid://qq6n2y0wj6b4" path="res://assets/textures/ui/ui_sheet.png" id="1_12g64"]
[ext_resource type="Script" uid="uid://bgabjmimyfw1" path="res://scripts/ui/upgrade.gd" id="2_hr5fq"]
[ext_resource type="FontFile" uid="uid://dbwh2vnpvxyt" path="res://assets/textures/ui/m5x7.ttf" id="3_cjoub"]
[ext_resource type="AudioStream" uid="uid://w8haihg82vm3" path="res://assets/sounds/button_off.wav" id="4_fipa6"]
[ext_resource type="AudioStream" uid="uid://dpfywfd3ilogs" path="res://assets/sounds/button_click_on.wav" id="5_qiy1t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hr5fq"]
atlas = ExtResource("1_12g64")
region = Rect2(0, 320, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_12g64"]
atlas = ExtResource("1_12g64")
region = Rect2(96, 320, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjoub"]
atlas = ExtResource("1_12g64")
region = Rect2(48, 320, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rpqn"]
atlas = ExtResource("1_12g64")
region = Rect2(16, 256, 192, 32)

[node name="Upgrade" type="TextureButton"]
offset_right = 48.0
offset_bottom = 32.0
texture_normal = SubResource("AtlasTexture_hr5fq")
texture_pressed = SubResource("AtlasTexture_12g64")
texture_hover = SubResource("AtlasTexture_cjoub")
script = ExtResource("2_hr5fq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Cost" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0.964706, 0.988235, 1)
theme_override_fonts/font = ExtResource("3_cjoub")
text = "1"
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
stretch_mode = 3

[node name="ToolTip" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_top = 32.0
offset_right = 192.0
offset_bottom = 72.0
texture = SubResource("AtlasTexture_0rpqn")

[node name="Label" type="Label" parent="ToolTip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.960784, 0.964706, 0.988235, 1)
theme_override_fonts/font = ExtResource("3_cjoub")
text = "This is a test to see what each updrade is supposed to say what idsfasdf"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fipa6")

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qiy1t")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
